--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Advocate Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -17,14 +18,14 @@
       <div class="avatar">
         <img src="img/profile.avif" alt="Advocate Photo"
              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-        <span class="initials" id="initials">A K</span>
+        <span class="initials" id="initials">M. K. T.</span>
       </div>
     </div>
 
     <div class="header-info">
-      <h1>Adv. Ajay Kumar</h1>
+      <h1>Adv. M. K. Tiwari</h1>
       <p class="designation">Practicing Advocate</p>
-      <p class="courts">High Court & District Courts</p>
+      <p class="courts">District and Session Court, Amravati</p>
     </div>
   </header>
 
@@ -117,21 +118,53 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
     <section class="tab-panel reveal" id="contact">
-      <div class="card">
-        <h3>Contact Details</h3>
-        <p>
-          adv.ajay@example.com<br>
-          +91 9XXXXXXXXX
-        </p>
-      </div>
-    </section>
+  <div class="card contact-card">
+    <h3>Contact Details</h3>
+
+    <p class="contact-number">
+      <strong>Primary:</strong> +91 98765 43210
+    </p>
+
+    <div class="contact-actions">
+      <a href="tel:+919876543210" class="contact-btn call">
+  <i class="fa-solid fa-phone"></i> Call
+</a>
+
+      <a href="sms:+919876543210" class="contact-btn sms">
+  <i class="fa-solid fa-comment-dots"></i> SMS
+</a>
+
+      <a href="https://wa.me/919876543210" target="_blank" class="contact-btn whatsapp">
+  <i class="fa-brands fa-whatsapp"></i> WhatsApp
+</a>
+    </div>
+<br>
+    <p class="contact-number">
+      <strong>Alternate:</strong> +91 84119 07193
+    </p>
+
+    <div class="contact-actions">
+      <a href="tel:+9184119 07193" class="contact-btn call">
+  <i class="fa-solid fa-phone"></i> Call
+</a>
+
+      <a href="sms:+9184119 07193" class="contact-btn sms">
+  <i class="fa-solid fa-comment-dots"></i> SMS
+</a>
+
+      <a href="https://wa.me/9184119 07193" target="_blank" class="contact-btn whatsapp">
+  <i class="fa-brands fa-whatsapp"></i> WhatsApp
+</a>
+    </div>
+
+  </div>
+</section>
 
   </main>
 
   <footer class="profile-footer">
-    © 2025 Advocate Profile · Professional Legal Practice
+    © 2025 M.K. Tiwari Official
   </footer>
 
 </div>
