--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button class="tab active" data-tab="overview">Overview</button>
     <button class="tab" data-tab="education">Education</button>
     <button class="tab" data-tab="practice">Practice</button>
-    <!-- <button class="tab" data-tab="team">Juniors & Interns</button> -->
+    <button class="tab" data-tab="team">Address</button>
     <button class="tab" data-tab="contact">Contact</button>
   </nav>
 
@@ -87,36 +87,39 @@
       </div>
     </section>
 
-    <!-- TEAM -->
-    <section class="tab-panel reveal" id="team">
-      <div class="team-grid">
+<!-- TEAM -->
+<section class="tab-panel reveal" id="team">
+  <div class="card">
+    <h3>Office Address</h3>
 
-        <article class="team-member reveal">
-          <img src="images/junior1.jpg">
-          <h4>Rohit Sharma</h4>
-          <span>Junior Advocate</span>
-        </article>
+    <p>
+      <i class="fa-solid fa-location-dot"></i>
+      Chamber No. 12, Civil Court Complex<br>
+      District & Session Court Campus<br>
+      Amravati, Maharashtra – 444601
+    </p>
+  </div>
 
-        <article class="team-member reveal">
-          <img src="images/junior2.jpg">
-          <h4>Neha Verma</h4>
-          <span>Junior Advocate</span>
-        </article>
+  <div class="card">
+    <h3>Office Timings</h3>
+    <p>
+      <i class="fa-solid fa-clock"></i>
+      Monday – Saturday<br>
+      10:30 AM – 6:30 PM
+    </p>
+  </div>
 
-        <article class="team-member reveal">
-          <img src="images/intern1.jpg">
-          <h4>Aman Singh</h4>
-          <span>Legal Intern</span>
-        </article>
-
-        <article class="team-member reveal">
-          <img src="images/intern2.jpg">
-          <h4>Pooja Mehta</h4>
-          <span>Legal Intern</span>
-        </article>
-
-      </div>
-    </section>
+  <div class="card">
+    <h3>Google Maps</h3>
+    <p>
+      <a href="https://www.google.com/maps" target="_blank"
+         style="color: var(--blue); text-decoration: none;">
+        <i class="fa-solid fa-map-location-dot"></i>
+        View Location on Google Maps
+      </a>
+    </p>
+  </div>
+</section>
 
     <section class="tab-panel reveal" id="contact">
   <div class="card contact-card">
