Add office and residence address sections

--- a/index.html
+++ b/index.html
@@ -88,37 +88,64 @@
     </section>
 
 <!-- TEAM -->
-<section class="tab-panel reveal" id="team">
-  <div class="card">
-    <h3>Office Address</h3>
 
+<section class="tab-panel reveal" id="team">
+
+  <!-- OFFICE ADDRESS -->
+  <div class="card">
+    <h3><i class="fa-solid fa-building-columns"></i> Office Address</h3>
     <p>
-      <i class="fa-solid fa-location-dot"></i>
       Chamber No. 12, Civil Court Complex<br>
       District & Session Court Campus<br>
       Amravati, Maharashtra – 444601
     </p>
+
+    <a
+      href="https://www.google.com/maps/dir/?api=1&destination=District+Court+Amravati"
+      target="_blank"
+      class="map-btn"
+    >
+      <i class="fa-solid fa-location-arrow"></i> Get Directions
+    </a>
   </div>
 
+  <!-- RESIDENCE ADDRESS -->
   <div class="card">
-    <h3>Office Timings</h3>
+    <h3><i class="fa-solid fa-house"></i> Residence Address</h3>
     <p>
-      <i class="fa-solid fa-clock"></i>
+      Plot No. 45, Shastri Nagar<br>
+      Near Hanuman Mandir<br>
+      Amravati, Maharashtra – 444602
+    </p>
+  </div>
+
+  <!-- OFFICE TIMINGS -->
+  <div class="card">
+    <h3><i class="fa-solid fa-clock"></i> Office Timings</h3>
+    <p>
       Monday – Saturday<br>
-      10:30 AM – 6:30 PM
+      <strong>10:30 AM – 6:30 PM</strong>
     </p>
+
+    <div class="notice">
+      <i class="fa-solid fa-circle-info"></i>
+      Office remains closed on Court holidays & vacations.
+    </div>
   </div>
 
+  <!-- GOOGLE MAP EMBED -->
   <div class="card">
-    <h3>Google Maps</h3>
-    <p>
-      <a href="https://www.google.com/maps" target="_blank"
-         style="color: var(--blue); text-decoration: none;">
-        <i class="fa-solid fa-map-location-dot"></i>
-        View Location on Google Maps
-      </a>
-    </p>
+    <h3><i class="fa-solid fa-map-location-dot"></i> Location Map</h3>
+
+    <div class="map-wrapper">
+      <iframe
+        src="https://www.google.com/maps?q=District%20Court%20Amravati&output=embed"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
   </div>
+
 </section>
 
     <section class="tab-panel reveal" id="contact">
