--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
         </h3>
 
         <p class="contact-number">
-          <strong>Primary:</strong> +91 98765 43210
+          <strong>Primary:</strong> +91 9372433329
         </p>
 
         <div class="contact-actions">
-          <a href="tel:+919876543210" class="contact-btn call">
+          <a href="tel:+919372433329" class="contact-btn call">
             <i class="fa-solid fa-phone"></i> Call
           </a>
 
-          <a href="sms:+919876543210" class="contact-btn sms">
+          <a href="sms:+919372433329" class="contact-btn sms">
             <i class="fa-solid fa-comment-dots"></i> SMS
           </a>
 
-          <a href="https://wa.me/919876543210" target="_blank"
+          <a href="https://wa.me/919372433329" target="_blank"
              class="contact-btn whatsapp">
             <i class="fa-brands fa-whatsapp"></i> WhatsApp
           </a>
