Restore contact section and related elements
Restored contact information and contact tab in the HTML.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,31 @@
       <p class="designation">
         <i class="fa-solid fa-user-tie"></i> Practicing Advocate
       </p>
-      <p class="courts">
+      <!-- <p class="courts">
         <i class="fa-solid fa-building-columns"></i>
         District & Session Court, Amravati
-      </p>
+      </p> -->
+
+<p class="courts">
+  <i class="fa-solid fa-building-columns"></i>
+  District & Session Court, Amravati
+</p>
+
+<div class="header-contact">
+  <a href="tel:+919372433329" class="hc-btn call" title="Call">
+    <i class="fa-solid fa-phone"></i>
+  </a>
+
+  <a href="sms:+919372433329" class="hc-btn sms" title="SMS">
+    <i class="fa-solid fa-comment-dots"></i>
+  </a>
+
+  <a href="https://wa.me/919372433329" target="_blank"
+     class="hc-btn whatsapp" title="WhatsApp">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
+</div>
+
     </div>
   </header>
 
@@ -57,9 +78,9 @@
       <i class="fa-solid fa-location-dot"></i> Address
     </button>
 
-    <button class="tab" data-tab="contact">
+    <!-- <button class="tab" data-tab="contact">
       <i class="fa-solid fa-phone-volume"></i> Contact
-    </button>
+    </button> -->
   </nav>
 
   <!-- CONTENT -->
@@ -172,7 +193,7 @@
     </section>
 
     <!-- CONTACT -->
-    <section class="tab-panel reveal" id="contact">
+    <!-- <section class="tab-panel reveal" id="contact">
       <div class="card contact-card">
         <h3>
           <i class="fa-solid fa-address-book"></i> Contact Details
@@ -219,7 +240,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
   </main>
 
