--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="header-info">
       <h1>Adv. M. K. Tiwari</h1>
       <p class="designation">
-        <i class="fa-solid fa-user-tie"></i> Practicing Advocate
+         Practicing Advocate
       </p>
 
 <p class="courts">
-  <i class="fa-solid fa-building-columns"></i>
+  <i class="fa-solid fa-building-columns" style="padding: 0 4px 0 0;"></i>
   District & Session Court, Amravati
 </p>
 
@@ -147,7 +147,7 @@
 
   <!-- FOOTER -->
   <footer class="profile-footer">
-    © 2025 M.K. Tiwari Official
+    © 2026 M.K. Tiwari Official
   </footer>
 
 </div>
