--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
           <i class="fa-solid fa-briefcase"></i> Professional Profile
         </h3>
         <p>
-          <strong>Experience:</strong> 10+ Years<br>
+          <strong>Experience:</strong> 17+ Years<br>
           <strong>Specialization:</strong> Criminal, Constitutional & Cyber Law<br>
-          <strong>Languages:</strong> English, Hindi
+          <strong>Languages:</strong> English, Hindi, Marathi
         </p>
       </div>
     </section>
@@ -100,9 +100,9 @@
           <i class="fa-solid fa-user-graduate"></i> Academic Qualifications
         </h3>
         <ul>
-          <li>B.A. LL.B – Delhi University</li>
-          <li>LL.M (Constitutional Law)</li>
-          <li>Diploma in Cyber Law</li>
+          <li>B.A. LL.B – Amravati University</li>
+          <li>LL.M (Criminal Law)</li>
+          <li>M.A Litrature (English)</li>
         </ul>
       </div>
     </section>
