--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="header-info">
-      <h1>Adv. M. K. Tiwari</h1>
+      <h1>Adv. S. G. Dharme</h1>
       <p class="designation">
          Practicing Advocate
       </p>
@@ -39,15 +39,15 @@
 </p>
 
 <div class="header-contact">
-  <a href="tel:+919372433329" class="hc-btn call" title="Call">
+  <a href="tel:+917972618274" class="hc-btn call" title="Call">
     <i class="fa-solid fa-phone"></i>
   </a>
 
-  <a href="sms:+919372433329" class="hc-btn sms" title="SMS">
+  <a href="sms:+917972618274" class="hc-btn sms" title="SMS">
     <i class="fa-solid fa-comment-dots"></i>
   </a>
 
-  <a href="https://wa.me/919372433329" target="_blank"
+  <a href="https://wa.me/+917972618274" target="_blank"
      class="hc-btn whatsapp" title="WhatsApp">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
@@ -86,7 +86,7 @@
           <i class="fa-solid fa-briefcase"></i> Professional Profile
         </h3>
         <p>
-          <strong>Experience:</strong> 17+ Years<br>
+          <strong>Experience:</strong> 1+ Year<br>
           <strong>Specialization:</strong> Criminal, Constitutional & Cyber Law<br>
           <strong>Languages:</strong> English, Hindi, Marathi
         </p>
@@ -102,7 +102,7 @@
         <ul>
           <li>B.A. LL.B – Amravati University</li>
           <li>LL.M (Criminal Law)</li>
-          <li>M.A Litrature (English)</li>
+          <li>P.H.D (Criminology)</li>
         </ul>
       </div>
     </section>
@@ -147,7 +147,7 @@
 
   <!-- FOOTER -->
   <footer class="profile-footer">
-    © 2026 M.K. Tiwari Official
+    © 2026 S. G. Dharme Official
   </footer>
 
 </div>
