Update avatar initials from 'M. K. T.' to 'S.G.D.'

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="avatar">
         <img src="img/profile.jpg" alt="Advocate Photo"
              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-        <span class="initials" id="initials">M. K. T.</span>
+        <span class="initials" id="initials">S.G.D.</span>
       </div>
     </div>
 
