Update specialization and academic qualifications

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </h3>
         <p>
           <strong>Experience:</strong> 1+ Year<br>
-          <strong>Specialization:</strong> Criminal, Constitutional & Cyber Law<br>
+          <strong>Specialization:</strong> Criminal Law<br>
           <strong>Languages:</strong> English, Hindi, Marathi
         </p>
       </div>
@@ -101,7 +101,7 @@
         </h3>
         <ul>
           <li>B.A. LL.B – Amravati University</li>
-          <li>LL.M (Criminal Law)</li>
+          <li>LL.M (Criminology)</li>
           <li>P.H.D (Criminology)</li>
         </ul>
       </div>
