--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
           <i class="fa-solid fa-building-columns"></i> Office Address
         </h3>
         <p>
-          Chamber No. 12, Civil Court Complex<br>
-          District & Session Court Campus<br>
+          Chamber No. 12, Main Building,<br>
           Amravati, Maharashtra – 444601
         </p>
 
