--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="profile-header">
     <div class="avatar-wrapper">
       <div class="avatar">
-        <img src="img/profile.jpg" alt="Advocate Photo"
+        <img src="img/profile1.jpg" alt="Advocate Photo"
              onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
         <span class="initials" id="initials">S.G.D.</span>
       </div>
